# pest-ide-tools

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  DOCS.md  README.md  TEST_CASES.md  Taskfile.yml  flake.nix  package-lock.json  pest.tmLanguage  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  package.yml  release.yml  vscode.yml
language-server/: Cargo.toml
language-server/src/: analysis.rs  builtins.rs  capabilities.rs  config.rs  helpers.rs  lib.rs  lsp.rs  main.rs  update_checker.rs
neovim/lua/pest-tools/: init.lua
neovim/syntax/: pest.vim
performance-mark-proc-macro/: Cargo.toml
performance-mark-proc-macro/src/: lib.rs
pest-language-server-performance-mark-proc-macro/: Cargo.toml
sublime-text/: pest.tmLanguage  pest.tmLanguage.json
vscode/: .eslintrc.js  .prettierrc.js  .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/client/: tsconfig.json
vscode/client/src/: index.ts  server.ts
vscode/server/: tsconfig.json
vscode/server/src/: index.ts
vscode/syntaxes/: pest.tmLanguage.json
vscode/tests/: cjk.pest  json.pest  misc.pest  no_consume.pest
