[package]
name = "pest-language-server"
version = "0.3.1"
authors = ["Jamalam <james@jamalam.tech>"]
description = "A language server for Pest."
edition = "2021"
homepage = "https://pest.rs"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pest-parser/pest-ide-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5"
pest_fmt = "0.2"
pest_meta = "2.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["full"] }
tower-lsp = "0.19"
unicode-segmentation = "1.10"

[dev-dependencies]
rusty-hook = "0.11"
