[package]
name = "pest-language-server"
version = "0.3.11"
authors = ["Jamalam <james@jamalam.tech>"]
description = "A language server for Pest."
edition = "2021"
homepage = "https://pest.rs"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pest-parser/pest-ide-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.9"
pest_fmt = "0.2.5"
pest_meta = "2.7.9"
reqwest = { version = "0.12.4", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
unicode-segmentation = "1.11.0"

[dev-dependencies]
rusty-hook = "0.11"
