[package]
name = "pest-language-server"
version = "0.3.12"
authors = ["Jamalam <james@jamalam.tech>"]
description = "A language server for Pest."
edition = "2024"
homepage = "https://pest.rs"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pest-parser/pest-ide-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["cargo"] }
pest = "2.8.6"
pest_fmt = "0.2.5"
pest_meta = {version = "2.8.5", features = ["grammar-extras"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
strum = "0.27.2"
strum_macros = "0.27.2"
tower-lsp = { version = "0.20.0", features = ["runtime-agnostic"], default-features = false }
unicode-segmentation = "1.11.0"
url = { version = "2.5.8", features = ["serde"] }
