[package]
name = "pest-language-server-performance-mark-proc-macro"
version = "0.1.0"
description = "A proc macro used internally by Pest."
authors = ["Jamalam <james@jamalam.tech>"]
edition = "2021"

homepage = "https://pest.rs"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pest-parser/pest-ide-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
